# zeroone

business-idea-factory/: business-idea-factory-prompt.md
every-ai-agent-hack/: README.md  every-ai-agent-hack-prompt.md
insider-trading-agent/: insider-trading-agent-prompt.md
markov-2.0/: markov-2.0-prompt.md
markov-method/: README.md  markov-method-prompt.md  markov-method.md
markov-method/skill/: .gitignore  SKILL.md  pyproject.toml
markov-method/skill/markov_regime_method/: __init__.py  hmm_extension.py  regime.py  run.py
markov-method/skill/regime_performance_analytics/: __init__.py  analytics.py  ci.py  hmm_extension.py  regime.py  run.py
markov-method/skill/tests/: test_ci.py  test_distributional.py  test_tdd.py
regime-analytics-tradingview/: README.md  regime-analytics-prompt.md  regime-analytics.pine
self-improving-trading-agent/: README.md  self-improving-trading-agent-prompt.md
unlock-tradingview/: FPU-MAX.pine  unlock-tradingview-prompt.md
