[project]
name = "regime-performance-analytics"
version = "3.0.0"
description = "Markov regime model with CTA-grade performance analytics: Burghardt-Liu autocorrelation-corrected Sharpe, correct Sortino ratio (Red Rock/CME method), and regime-conditional interpretation"
requires-python = "==3.12.*"
dependencies = [
    "yfinance>=0.2",
    "numpy>=1.26",
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "scipy>=1.12",
]

[project.optional-dependencies]
hmm = ["hmmlearn>=0.3"]
test = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["regime_performance_analytics*", "markov_regime_method*"]
